fix: keep sort field order stable